[package]
name = "mc-crypto-digestible-signature"
version = "1.0.1-pre1"
authors = ["MobileCoin"]
edition = "2018"
description = "Digestible Signatures"
readme = "README.md"

[dependencies]
mc-crypto-digestible = { path = ".." }

signature = { version = "1.2", default-features = false }

# Overridden since we need a not-yet-released commit that uprevs a bunch of dependencies.
schnorrkel = { git = "https://github.com/w3f/schnorrkel", rev = "34cdb371c14a73cbe86dfd613ff67d61662b4434", default-features = false }
