[package]
name = "mc-crypto-digestible-signature"
version = "1.0.1-pre1"
authors = ["MobileCoin"]
edition = "2018"
description = "Digestible Signatures"
readme = "README.md"

[dependencies]
mc-crypto-digestible = { path = ".." }

signature = { version = "1.2", default-features = false }

# Overridden since we need a not-yet-released commit that uprevs a bunch of dependencies.
schnorrkel = { git = "https://github.com/eranrund/schnorrkel", rev = "3cca0b7cb3df1eb9256f12497aed7645bde91ef3", default-features = false }
